fix: delete css for html and body and create body-wrap css

--- a/client/src/styles/globalstyle.scss
+++ b/client/src/styles/globalstyle.scss
@@ -1,5 +1,5 @@
-@import './reset.scss';
-@import './fonts.scss';
+@use './reset';
+@use './fonts';
 
 :root {
   --black: #333333;
@@ -7,25 +7,17 @@
   --red: #f8123b;
   --gray: #979797;
   --light-blue: #f5f5f7;
-}
-html {
-  height: 100%;
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-rendering: optimizeLegibility;
 }
 
-body {
-  flex: 1;
+.body-wrap {
   display: flex;
   flex-direction: column;
+  width: 100%;
   align-items: center;
   font-family: 'PAYW Pro', 'PAYW Pro KR', sans-serif;
-  font-feature-settings: 'tnum' on, 'lnum' on;
   color: #333;
-  height: 100%;
-  width: 100%;
   scroll-behavior: smooth;
-  max-width: 792.31px;
 }
